; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_encode_lavc.c_encoder_destroy.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_encode_lavc.c_encoder_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.encoder_context = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @encoder_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encoder_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.encoder_context*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.encoder_context*
  store %struct.encoder_context* %5, %struct.encoder_context** %3, align 8
  %6 = load %struct.encoder_context*, %struct.encoder_context** %3, align 8
  %7 = getelementptr inbounds %struct.encoder_context, %struct.encoder_context* %6, i32 0, i32 1
  %8 = call i32 @avcodec_free_context(i32* %7)
  %9 = load %struct.encoder_context*, %struct.encoder_context** %3, align 8
  %10 = getelementptr inbounds %struct.encoder_context, %struct.encoder_context* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @free_stream(i32 %11)
  ret void
}

declare dso_local i32 @avcodec_free_context(i32*) #1

declare dso_local i32 @free_stream(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
